--- a/client/.gitignore
+++ b/client/.gitignore
@@ -25,3 +25,18 @@ dist-ssr
 
 .env
 .env.*.local
+
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production build
+/dist
+/build
+
+# Environment files
+.env
